# web_scrapper

./: Cargo.toml  README.md
Master_data/: master_data.csv
Match_details/: master_data.csv
src/: clean_up.rs  connect_duck_db.rs  fetch_latest_info.rs  main.rs  match_url_config.txt
