[package]
name = "web_scrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["blocking"] }
scraper = "0.18.1"
select = "0.6.0"
regex = "1.5.4"
csv = "1.1.6"
duckdb = { version = "0.9.2", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
